# adwaita-qt

./: AUTHORS  CMakeLists.txt  PKGBUILD  README.md
packaging/: 90-qt5-oomox-styleplugins.hook  90-qt6-oomox-styleplugin.hook
src/demo/: widgetfactory.ui
src/lib/: CMakeLists.txt  OodwaitaQtConfig.cmake.in  adwaitacolors.cpp  config-oodwaita.h.cmake  oodwaita-qt.pc.cmake  oodwaita.cpp  oodwaita.h  oodwaitaaddeventfilter.cpp  oodwaitaaddeventfilter.h  oodwaitacolors.cpp  oodwaitacolors.h  oodwaitacolors_p.h  oodwaitadebug.h  oodwaitamnemonics.cpp  oodwaitamnemonics.h  oodwaitaqt_export.h  oodwaitarenderer.cpp  oodwaitarenderer.h  oodwaitasplitterproxy.cpp  oodwaitasplitterproxy.h  oodwaitawidgetexplorer.cpp  oodwaitawidgetexplorer.h  oodwaitawindowmanager.cpp  oodwaitawindowmanager.h
src/lib/animations/: oodwaitaanimation.cpp  oodwaitaanimation.h  oodwaitaanimationdata.cpp  oodwaitaanimationdata.h  oodwaitaanimations.cpp  oodwaitaanimations.h  oodwaitabaseengine.cpp  oodwaitabaseengine.h  oodwaitabusyindicatordata.cpp  oodwaitabusyindicatordata.h  oodwaitabusyindicatorengine.cpp  oodwaitabusyindicatorengine.h  oodwaitadatamap.h  oodwaitadialdata.cpp  oodwaitadialdata.h  oodwaitadialengine.cpp  oodwaitadialengine.h  oodwaitaenabledata.cpp  oodwaitaenabledata.h  oodwaitagenericdata.cpp  oodwaitagenericdata.h  oodwaitaheaderviewdata.cpp  oodwaitaheaderviewdata.h  oodwaitaheaderviewengine.cpp  oodwaitaheaderviewengine.h  oodwaitascrollbardata.cpp  oodwaitascrollbardata.h  oodwaitascrollbarengine.cpp  oodwaitascrollbarengine.h  oodwaitaspinboxdata.cpp  oodwaitaspinboxdata.h  oodwaitaspinboxengine.cpp  oodwaitaspinboxengine.h  oodwaitastackedwidgetdata.cpp  oodwaitastackedwidgetdata.h  oodwaitastackedwidgetengine.cpp  oodwaitastackedwidgetengine.h  oodwaitatabbardata.cpp  oodwaitatabbardata.h  oodwaitatabbarengine.cpp  (+11 more)
src/lib/stylesheet/: stylesheet.qrc.in
src/lib/stylesheet/processed/: Oodwaita-light.css
src/style/: CMakeLists.txt  adwaitastyleplugin.cpp  oodwaita.json  oodwaita.themerc  oodwaitahelper.cpp  oodwaitahelper.h  oodwaitastyle.cpp  oodwaitastyle.h  oodwaitastyleplugin.cpp  oodwaitastyleplugin.h
